// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatTopBar > renderiza el estado visual de Jarvis Core: { status: 'error', uptimeMs: 5000, snapshot: 'error-state' } > error-state 1`] = `
<button
  aria-label="Jarvis Core con incidencias. Tiempo en línea: 0 minutos y 5 segundos"
  class="icon-button jarvis-runtime-button status-error"
  title="Jarvis Core con incidencias · Fallo"
  type="button"
>
  <span
    aria-hidden="true"
    class="jarvis-runtime-icon"
  >
    🤖
  </span>
  <span
    aria-hidden="true"
    class="jarvis-runtime-copy"
  >
    <span
      class="jarvis-runtime-status"
    >
      Jarvis Core con incidencias
    </span>
    <span
      class="jarvis-runtime-uptime"
    >
      ↑ 0m 05s
    </span>
  </span>
</button>
`;

exports[`ChatTopBar > renderiza el estado visual de Jarvis Core: { status: 'ready', uptimeMs: 5400000, snapshot: 'ready-state' } > ready-state 1`] = `
<button
  aria-label="Jarvis Core operativo. Tiempo en línea: 1 hora y 30 minutos"
  class="icon-button jarvis-runtime-button status-ready"
  title="Jarvis Core operativo"
  type="button"
>
  <span
    aria-hidden="true"
    class="jarvis-runtime-icon"
  >
    🤖
  </span>
  <span
    aria-hidden="true"
    class="jarvis-runtime-copy"
  >
    <span
      class="jarvis-runtime-status"
    >
      Jarvis Core operativo
    </span>
    <span
      class="jarvis-runtime-uptime"
    >
      ↑ 1h 30m
    </span>
  </span>
</button>
`;

exports[`ChatTopBar > renderiza el estado visual de Jarvis Core: { status: 'starting', uptimeMs: null, snapshot: 'starting-state' } > starting-state 1`] = `
<button
  aria-label="Jarvis Core iniciando…"
  class="icon-button jarvis-runtime-button status-starting"
  title="Jarvis Core iniciando…"
  type="button"
>
  <span
    aria-hidden="true"
    class="jarvis-runtime-icon"
  >
    🤖
  </span>
  <span
    aria-hidden="true"
    class="jarvis-runtime-copy"
  >
    <span
      class="jarvis-runtime-status"
    >
      Jarvis Core iniciando…
    </span>
  </span>
</button>
`;
